upgrade springboot from 2.7.15 to 3.1.3 and java version from 11 to 17 (#12)
* upgrade springboot from 2.7.15 to 3.1.3 and java version from 11 to 17

* remove unused code

* upgrade maven wrapper version

* resolve pr comment